--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "deploy": "gh-pages -d dist/srinivasj"
   },
   "private": true,
+  "homepage": "https://jagarapusrinivasarao.github.io/srinivasj/",
   "dependencies": {
     "@angular/animations": "^6.0.3",
     "@angular/common": "^6.0.3",
@@ -23,6 +25,7 @@
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
+    "gh-pages": "^2.0.1",
     "jquery": "^3.4.1",
     "ng-simple-slideshow": "^1.2.9",
     "rxjs": "6.0.0",
